[gd_scene load_steps=70 format=3 uid="uid://pichcjjcr5t7"]

[ext_resource type="Texture2D" uid="uid://cewinyjoy1pqt" path="res://assets/warrior/Death.png" id="1_5ewx8"]
[ext_resource type="Script" path="res://scn/Mobs/Warrior/enemy_warrior.gd" id="1_xmfkb"]
[ext_resource type="Texture2D" uid="uid://cmuahlqk35fxs" path="res://assets/warrior/Attack1.png" id="2_hpd0k"]
[ext_resource type="Texture2D" uid="uid://qasrr74kjyv" path="res://assets/warrior/Idle.png" id="2_scm38"]
[ext_resource type="Texture2D" uid="uid://bouom4vcfmcbi" path="res://assets/warrior/Attack2.png" id="3_j1ilw"]
[ext_resource type="Texture2D" uid="uid://bq8hmkx5ok0tm" path="res://assets/warrior/Fall.png" id="5_83oa5"]
[ext_resource type="Texture2D" uid="uid://bclrlmonbhpmw" path="res://assets/warrior/Hit.png" id="6_1aivs"]
[ext_resource type="Texture2D" uid="uid://b3ijca7ujfk3f" path="res://assets/warrior/Jump.png" id="8_4pj0x"]
[ext_resource type="Texture2D" uid="uid://d3gm32vhjyxg3" path="res://assets/warrior/Run2.png" id="9_2gddr"]
[ext_resource type="PackedScene" uid="uid://mh8i7ekloai4" path="res://scn/DamageBox/damage_box.tscn" id="10_biu8x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m7a4q"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dnrhf"]
atlas = ExtResource("2_hpd0k")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lde0"]
atlas = ExtResource("2_hpd0k")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_benrm"]
atlas = ExtResource("2_hpd0k")
region = Rect2(416, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6v72"]
atlas = ExtResource("2_hpd0k")
region = Rect2(624, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_75a1o"]
atlas = ExtResource("3_j1ilw")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bebhx"]
atlas = ExtResource("3_j1ilw")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhkvo"]
atlas = ExtResource("3_j1ilw")
region = Rect2(416, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6y1t"]
atlas = ExtResource("3_j1ilw")
region = Rect2(624, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtrr7"]
atlas = ExtResource("1_5ewx8")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ixr7"]
atlas = ExtResource("1_5ewx8")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkc3s"]
atlas = ExtResource("1_5ewx8")
region = Rect2(416, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4gc5"]
atlas = ExtResource("1_5ewx8")
region = Rect2(624, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl7ji"]
atlas = ExtResource("1_5ewx8")
region = Rect2(832, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc6hr"]
atlas = ExtResource("1_5ewx8")
region = Rect2(1040, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5jvt"]
atlas = ExtResource("1_5ewx8")
region = Rect2(1248, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfppk"]
atlas = ExtResource("1_5ewx8")
region = Rect2(1456, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7bx5"]
atlas = ExtResource("1_5ewx8")
region = Rect2(1664, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gthcc"]
atlas = ExtResource("5_83oa5")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_beace"]
atlas = ExtResource("5_83oa5")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3f8k"]
atlas = ExtResource("6_1aivs")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmmm0"]
atlas = ExtResource("6_1aivs")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu1b7"]
atlas = ExtResource("6_1aivs")
region = Rect2(416, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6txek"]
atlas = ExtResource("2_scm38")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i81jp"]
atlas = ExtResource("2_scm38")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ibx"]
atlas = ExtResource("2_scm38")
region = Rect2(416, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gqib"]
atlas = ExtResource("2_scm38")
region = Rect2(624, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfswv"]
atlas = ExtResource("2_scm38")
region = Rect2(832, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5288"]
atlas = ExtResource("2_scm38")
region = Rect2(1040, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiqod"]
atlas = ExtResource("8_4pj0x")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hywfc"]
atlas = ExtResource("8_4pj0x")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i48tb"]
atlas = ExtResource("2_scm38")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx427"]
atlas = ExtResource("2_scm38")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjyyu"]
atlas = ExtResource("2_scm38")
region = Rect2(416, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a5m3"]
atlas = ExtResource("2_scm38")
region = Rect2(624, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eitpq"]
atlas = ExtResource("2_scm38")
region = Rect2(832, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f74eo"]
atlas = ExtResource("2_scm38")
region = Rect2(1040, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7hdb"]
atlas = ExtResource("9_2gddr")
region = Rect2(0, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4ybi"]
atlas = ExtResource("9_2gddr")
region = Rect2(208, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ved"]
atlas = ExtResource("9_2gddr")
region = Rect2(416, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sx6s"]
atlas = ExtResource("9_2gddr")
region = Rect2(624, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc8vw"]
atlas = ExtResource("9_2gddr")
region = Rect2(832, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lhj2"]
atlas = ExtResource("9_2gddr")
region = Rect2(1040, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_krxwa"]
atlas = ExtResource("9_2gddr")
region = Rect2(1248, 0, 208, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f4bh"]
atlas = ExtResource("9_2gddr")
region = Rect2(1456, 0, 208, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_3v7g4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnrhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lde0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_benrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6v72")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75a1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bebhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhkvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6y1t")
}],
"loop": false,
"name": &"attack2",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtrr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ixr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkc3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4gc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl7ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc6hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5jvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfppk")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_n7bx5")
}],
"loop": false,
"name": &"death",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gthcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_beace")
}],
"loop": true,
"name": &"fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3f8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmmm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu1b7")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6txek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i81jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ibx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gqib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfswv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5288")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiqod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hywfc")
}],
"loop": true,
"name": &"jump",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i48tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx427")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjyyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a5m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eitpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f74eo")
}],
"loop": false,
"name": &"recover",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7hdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4ybi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ved")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sx6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc8vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lhj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krxwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f4bh")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_2fdgr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionPolygon2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tj2g6"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.298243, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_igwms"]
length = 0.363636
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0909091, 0.181818, 0.272727),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack2"]
}

[sub_resource type="Animation" id="Animation_lvwpf"]
length = 1.09091
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0909091, 0.181818, 0.272727, 0.363636, 0.454545, 0.545455, 0.636364, 0.727273),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7joek"]
length = 0.333333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["fall"]
}

[sub_resource type="Animation" id="Animation_ifmxp"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hit"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nxttq"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m56u8"]
length = 0.666667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["jump"]
}

[sub_resource type="Animation" id="Animation_gr83m"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wfb8p"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grslm"]
_data = {
"RESET": SubResource("Animation_2fdgr"),
"attack": SubResource("Animation_tj2g6"),
"attack2": SubResource("Animation_igwms"),
"death": SubResource("Animation_lvwpf"),
"fall": SubResource("Animation_7joek"),
"hit": SubResource("Animation_ifmxp"),
"idle": SubResource("Animation_nxttq"),
"jump": SubResource("Animation_m56u8"),
"recover": SubResource("Animation_gr83m"),
"run": SubResource("Animation_wfb8p")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dicvv"]
radius = 120.266

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23h4y"]
size = Vector2(37, 14)

[node name="EnemyWarrior" type="CharacterBody2D"]
script = ExtResource("1_xmfkb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_m7a4q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.137249, -8.5)
scale = Vector2(0.575603, 0.367187)
sprite_frames = SubResource("SpriteFrames_3v7g4")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grslm")
}
autoplay = "idle"

[node name="Detector" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_dicvv")

[node name="AttackDirection" type="Node2D" parent="."]
visible = false

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(21.5, 0)
shape = SubResource("RectangleShape2D_23h4y")
disabled = true

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("10_biu8x")]
visible = false
position = Vector2(22, -20)

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 16
collision_mask = 0

[node name="CollisionPolygon2D" parent="AttackDirection/DamageBox/HurtBox" index="0"]
position = Vector2(-42, -19)
scale = Vector2(0.220197, 0.371549)
polygon = PackedVector2Array(95.3693, 64.5944, 127.159, 69.9773, 140.783, 104.966, 127.159, 139.955, 90.8279, 145.337, 54.4967, 139.955, 40.8725, 104.966, 59.0381, 69.9773)

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(-25, -5)
scale = Vector2(0.291091, 0.225151)
polygon = PackedVector2Array(34.3535, 93.2709, 137.414, 93.2709, 147.72, 111.037, 137.414, 128.803, 34.3535, 128.803)

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="AttackDirection/DamageBox"]
